removed the white spaces that were in the experience and education, corrected the page loader, change CV file.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body.dark {
 	--text-black-700: #e9e9e9;
 }
 body {
+	overflow-x: hidden;
 	margin: 0;
 	padding: 0;
 	line-height: 1.5;
@@ -43,7 +44,7 @@ ul {
 	background: var(--bg-black-900);
 	min-height: 100vh;
 	display: block;
-	padding: 0 30px;
+	padding: 0 20px;
 	opacity: 1;
 }
 
@@ -264,7 +265,7 @@ ul {
 }
 .aside .nav li a {
 	font-size: 22px;
-	font-weight: 600;
+	font-weight: 500;
 	margin-left: 60px;
 	border-bottom: 1px solid var(--bg-black-50);
 	color: var(--text-black-900);
@@ -293,18 +294,19 @@ ul {
 	max-width: 60%;
 }
 h3.hello {
-	font-size: 25px;
+	font-size: 20px;
 	margin: 15px 0;
 }
 h3.hello span {
 	font-family: 'Dancing Script', cursive;
-	font-size: 27px;
+	font-size: 26px;
 }
 h3.my-profession {
-	font-size: 30px;
+	font-size: 25px;
 	margin: 15px 0;
 }
 .typing {
+	font-size: 25px;
 	color: var(--skin-color);
 }
 .home-info p {
@@ -548,6 +550,7 @@ h3.my-profession {
 .about .about-content .experience {
 	flex: 0 0 50%;
 	max-width: 50%;
+	margin-left: 15px;
 	margin-top: 30px;
 }
 .about .about-content h3.title {
@@ -934,6 +937,7 @@ h3.my-profession {
 	.about .about-content .education,
 	.about .about-content .skills,
 	.about .about-content .personal-info {
+		padding-left: 15px;
 		flex: 0 0 100%;
 		max-width: 100%;
 	}
